package enums;

public enum MemberType {
    CUSTOMER, SELLER, DELIVERY
}
