package enums;

public enum NotificationChannelType {
    EMAIL, SMS
}
