package enums;

public enum OrderEventType {
    ORDERED, SHIPPED, DELIVERED
}
